modified to ensure that native build works